<resources>
    <string name="app_name">Line</string>
    <string name="title_activity_tracing">Map</string>

    <!--Splash-->
    <string name="alert_gps_deactivate">¿Activar GPS en alta precisión?</string>

    <!--Signin-->
    <string name="hint_username">Número de documento</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_signin">Ingresar</string>
    <string name="toast_required_fields">Diligencie todos los campos</string>
    <string name="toast_invalid_password">¡Contraseña inválida!</string>
    <string name="toast_user_not_registered">¡Usuario no registrado!</string>
    <string name="toast_dni_not_exist">¡Número de documento erróneo!</string>

    <!--Drawer nav-->
    <string name="title_tracing">Rastreo</string>
    <string name="title_history">Historiales</string>
    <string name="title_logout">Salir</string>

    <!--Tracing-->
    <string name="title_view">Vista</string>
    <string name="message_successful_travel">¿Recorrido exitoso?</string>
    <string name="toast_successful_store">¡Carga exitosa!</string>
    <string name="toast_not_store">Seguimiento eliminado</string>
    <string name="toast_not_internet">No hay conexión a Internet</string>

    <string name="spinner_type_tracking">Tipo de seguimiento</string>
    <string-array name="options_type">
        <item>Supervisión</item>
        <item>Riego con tractor</item>
        <item>Riego manual</item>
    </string-array>

    <string name="spinner_substance">Sustancia a aplicar</string>
    <string-array name="options_substance">
        <item>A1</item>
        <item>A5</item>
        <item>C4</item>
    </string-array>

    <string name="text_task">Tarea</string>
    <string name="text_substance_to_apply">Sustancia a aplicar</string>
    <string name="hint_amount_substance">Cantidad</string>
    <string name="text_gallons">Galones</string>
    <string name="button_done">Listo</string>
    <string name="button_cancel">Cancelar</string>


    <!--DRAWER NAVIGATION-->
    <string name="title_activity_home"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--GENERALS-->
    <string name="message_yes">Si</string>
    <string name="message_no">No</string>
</resources>
