<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_task"
                android:textSize="17dp"/>
            <Spinner
                android:id="@+id/idSpinnerTypeTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/options_type"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearSpinnerSubstance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_substance_to_apply"
                android:textSize="17dp"/>
            <Spinner
                android:id="@+id/idSpinnerSubstance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/options_substance" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearSubstanceAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idSubstanceAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_amount_substance"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:text="@string/text_gallons"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/idButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/button_cancel" />
            <Button
                android:id="@+id/idButtonAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:enabled="false"
                android:text="@string/button_done" />
        </LinearLayout>



    </LinearLayout>

</FrameLayout>